next previous button updated

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,14 +11,14 @@ body {
 .slick-prev,
 .slick-next {
   background-color: #ffffff;
-  border: 1px solid #dadada;
-  width: 36px;
-  height: 36px;
+  border: 1px solid #dadada !important;
+  width: 36px !important;
+  height: 36px !important;
   z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #9d9d9d;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  color: gray !important;
   border-radius: 50%;
 }
 
@@ -26,17 +26,14 @@ body {
 .slick-next:before {
   color: #dadada;
   font-size: 18px;
-  opacity: 1;
-  content: "";
+  opacity: 1 !important;
+  content: "" !important;
 }
 
 .slick-prev::after {
   content: "<";
   color: #9d9d9d;
   font-size: 18px;
-  border: 1px solid #dadada !important;
-  padding: 10px;
-  border-radius: 100%;
 }
 
 .slick-next::after {
@@ -44,9 +41,6 @@ body {
   color: #686868;
   font-size: 18px;
   font-weight: bold;
-  border: 1px solid #dadada !important;
-  padding: 10px;
-  border-radius: 100%;
 }
 
 .slider-container {
@@ -230,7 +224,7 @@ body {
   transform: translateY(20px);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .slider-container {
     padding: 20px;
   }
