--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,305 @@
-/* Error: unmatched "}".
- *     ,
- * 300 | }
- *     | ^
- *     '
- *   styles\main.scss 300:1  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: unmatched "}".\a     \2577 \a 300 \2502  }\d\a     \2502  ^\a     \2575 \a   styles\\main.scss 300:1  root stylesheet';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.slick-prev,
+.slick-next {
+  background-color: #ffffff;
+  border: 1px solid #dadada !important;
+  width: 36px !important;
+  height: 36px !important;
+  z-index: 1;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  color: gray !important;
+  border-radius: 50%;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #dadada;
+  font-size: 18px;
+  opacity: 1 !important;
+  content: "" !important;
+}
+
+.slick-prev::after {
+  content: "<";
+  color: #9d9d9d;
+  font-size: 18px;
+}
+
+.slick-next::after {
+  content: ">";
+  color: #686868;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.slider-container {
+  padding: 100px;
+}
+
+.speaker-card {
+  background-color: #ffffff;
+  padding: 36px 21px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 10px;
+  box-shadow: 4px 10px 24px 0px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+.speaker-card__image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: auto;
+}
+.speaker-card__name {
+  font-weight: 700;
+  font-size: 24px;
+  margin-top: 10px;
+}
+.speaker-card .role_div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+.speaker-card__role {
+  font-weight: 600;
+  font-size: 18px;
+  color: #000000;
+}
+.speaker-card__company {
+  font-weight: 400;
+  font-size: 16px;
+  color: #6b6b6b;
+}
+
+.slider {
+  padding: 0 40px;
+}
+
+.speaker_top_heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.speakers__title {
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.speakers__description {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.companies {
+  font-size: 18px;
+  font-weight: 400;
+  color: #003fb4;
+}
+
+.speakers {
+  padding: 100px 0;
+}
+
+.programe_button {
+  display: flex;
+  justify-content: center;
+}
+
+.pro_btn {
+  padding: 20px 66px;
+  gap: 10px;
+  border-radius: 10px;
+  background: #003fb4;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: left;
+  border: none;
+  min-width: 400px;
+  text-align: center;
+  position: relative;
+}
+
+.button_arrow {
+  position: absolute;
+  bottom: -80px;
+  left: -18%;
+}
+
+.tooltips {
+  position: absolute;
+  bottom: -15px;
+  left: -48%;
+  color: #000000;
+  font-family: Work Sans;
+  font-size: 18px;
+  font-weight: 400;
+  max-width: 150px;
+}
+
+.speaker-card2 {
+  display: flex;
+  gap: 10px;
+}
+
+.speaker-card:hover {
+  transform: scale(1.03);
+}
+
+.modal {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 32% 1% auto;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  box-shadow: 4px 10px 24px 0px rgba(0, 0, 0, 0.1);
+  padding: 36px 30px;
+  border-radius: 10px;
+  opacity: 0;
+  position: relative;
+  width: 80%;
+  margin: auto;
+  display: none;
+  transform: translateY(20px);
+  animation: fadeInSlideUp 3s ease forwards;
+}
+@keyframes fadeInSlideUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes fadeOutSlideDown {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
+.social {
+  display: flex;
+  gap: 10px;
+  padding: 10px 0;
+}
+
+.cross {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.open {
+  display: grid;
+  animation: fadeInSlideUp 3s ease forwards;
+}
+
+.close {
+  animation: fadeInSlideUp 5s ease forwards;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+@media screen and (max-width: 768px) {
+  .slider-container {
+    padding: 40px;
+  }
+  .speaker-card {
+    padding: 20px;
+    margin: 20px;
+    width: 100%;
+  }
+  .speakers {
+    padding: 60px 0;
+  }
+  .speaker-card__image {
+    width: 100px;
+    height: 100px;
+  }
+  .speaker-card__name {
+    font-size: 18px;
+  }
+  .speaker-top-heading {
+    gap: 5px;
+  }
+  .speakers__title {
+    font-size: 24px;
+  }
+  .speakers__description {
+    font-size: 16px;
+  }
+  .pro_btn {
+    padding: 15px 50px;
+    min-width: 350px;
+    font-size: 18px;
+  }
+  .speaker-card__image2 {
+    width: 150px;
+    height: 150px;
+    margin: auto;
+  }
+  .modal {
+    grid-template-columns: 100%;
+    padding: 20px;
+    width: 90%;
+    margin-bottom: 100px;
+  }
+  .speaker-card__image2_line {
+    display: none;
+  }
+  .speaker-card2 {
+    flex-direction: column;
+  }
+  .social {
+    gap: 5px;
+  }
+  .cross {
+    top: 5px;
+    right: 5px;
+  }
+  .slider {
+    padding: 0 10px;
+  }
+  .speaker_top_heading {
+    text-align: center;
+    padding: 10px;
+  }
+  .button_arrow,
+  .tooltips {
+    display: none;
+  }
+  .programe_button {
+    margin-top: 100px;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
